@startuml Packages
!theme plain

package "peliculas" {
    class Pelicula
}

package "salas" {
    class Sala
}

package "funciones" {
    class Funcion
}

package "clientes" {
    class Cliente
    class Reserva
}

package "facturacion" {
    class Factura
}

' Relaciones entre paquetes
peliculas --> funciones
salas --> funciones
funciones --> clientes
clientes --> facturacion

@enduml
